实验数据和结果/GenProg4Java/Codec/8b/logSeed1.txt
0 [main] DEBUG clegoues.genprog4java.fitness.Fitness  - parsing granularity, value: class
36 [main] DEBUG clegoues.genprog4java.fitness.Fitness  - parsing granularity, value: class
#Tue Feb 09 23:51:15 CST 2021
negativeTestWeight=2.0
classSourceFolder=/home/rtx/repair/d4j/Codec/8b/target/classes
model=default
sampleStrategy=variant
srcClassPath=/home/rtx/repair/d4j/Codec/8b/target/classes
sourceVersion=1.8
popsize=40
regenPaths=false
posCoverageFile=coverage.path.pos
continue=false
edits=APPEND;DELETE;REPLACE
negCoverageFile=coverage.path.neg
workingDir=/home/rtx/repair/d4j/Codec/8b/
clearTestCache=false
skipFailedSanity=false
sample=0.1 
oracleGenome=
testGranularity=class
justTestingFaultLoc=false
faultLocStrategy=standardPathFile
crossp=0.5
pMutation=1
generations=10
positiveTests=/home/rtx/repair/d4j/Codec/8b/pos.tests
javaVM=/home/rtx/java/jdk1.8.0_271/jre/bin/java
seed=1
negativePathWeight=0.35
compileCommand=
fixStrategy=classScope
allowCoverageFail=false
targetClassName=/home/rtx/repair/d4j/Codec/8b/bugfiles.txt
javaRuntime=java.lang.Runtime@6576fe71
classTestFolder=
modelPath=OVERALLModel.txt
sanity=yes
positivePathWeight=0.65
jacocoPath=/home/rtx/eclipse-workspace/genprog4java/lib/jacocoagent.jar
negativeTests=/home/rtx/repair/d4j/Codec/8b/neg.tests
pathToFileHumanInjectedFaultLoc=fileHumanInjectedFaultLoc.txt
outputDir=/home/rtx/repair/d4j/Codec/8b/genprog4java/variantSeed1/
testClassPath=/home/rtx/repair/d4j/Codec/8b/target/classes\:/home/rtx/repair/d4j/Codec/8b/target/tests\:/home/rtx/repair/defects4j/framework/projects/lib/junit-4.11.jar\:/home/rtx/repair/defects4j/framework/projects/Codec/lib/junit/junit/4.12/junit-4.12.jar\:/home/rtx/repair/defects4j/framework/projects/Codec/lib/lib/junit/junit/4.12/junit-4.12.jar\:/home/rtx/repair/defects4j/framework/projects/Codec/lib/lib/org/apache/commons/commons-lang3/3.4/commons-lang3-3.4.jar\:/home/rtx/repair/defects4j/framework/projects/Codec/lib/lib/org/apache/commons/commons-lang3/3.8.1/commons-lang3-3.8.1.jar\:/home/rtx/repair/defects4j/framework/projects/Codec/lib/lib/org/hamcrest/hamcrest-core/1.3/hamcrest-core-1.3.jar\:/home/rtx/repair/defects4j/framework/projects/Codec/lib/org/apache/commons/commons-lang3/3.4/commons-lang3-3.4.jar\:/home/rtx/repair/defects4j/framework/projects/Codec/lib/org/apache/commons/commons-lang3/3.8.1/commons-lang3-3.8.1.jar\:/home/rtx/repair/defects4j/framework/projects/Codec/lib/org/hamcrest/hamcrest-core/1.3/hamcrest-core-1.3.jar
faultStrategy=classScope
sourceDir=src/java
checkSpace=false
search=gp
globalExtension=.java
faultSpaceSubSet=1/5
maxVariants=50
libs=/home/rtx/eclipse-workspace/genprog4java/lib/junittestrunner.jar\:/home/rtx/eclipse-workspace/genprog4java/lib/commons-cli-20040117.000000.jar\:/home/rtx/eclipse-workspace/genprog4java/lib/junit-4.12.jar\:/home/rtx/eclipse-workspace/genprog4java/lib/hamcrest-core-1.3.jar\:/home/rtx/eclipse-workspace/genprog4java/lib/log4j-1.2.17.jar\:/home/rtx/repair/d4j/Codec/8b/target/classes\:/home/rtx/repair/d4j/Codec/8b/target/tests\:/home/rtx/repair/defects4j/framework/projects/lib/junit-4.11.jar\:/home/rtx/repair/defects4j/framework/projects/Codec/lib/junit/junit/4.12/junit-4.12.jar\:/home/rtx/repair/defects4j/framework/projects/Codec/lib/lib/junit/junit/4.12/junit-4.12.jar\:/home/rtx/repair/defects4j/framework/projects/Codec/lib/lib/org/apache/commons/commons-lang3/3.4/commons-lang3-3.4.jar\:/home/rtx/repair/defects4j/framework/projects/Codec/lib/lib/org/apache/commons/commons-lang3/3.8.1/commons-lang3-3.8.1.jar\:/home/rtx/repair/defects4j/framework/projects/Codec/lib/lib/org/hamcrest/hamcrest-core/1.3/hamcrest-core-1.3.jar\:/home/rtx/repair/defects4j/framework/projects/Codec/lib/org/apache/commons/commons-lang3/3.4/commons-lang3-3.4.jar\:/home/rtx/repair/defects4j/framework/projects/Codec/lib/org/apache/commons/commons-lang3/3.8.1/commons-lang3-3.8.1.jar\:/home/rtx/repair/defects4j/framework/projects/Codec/lib/org/hamcrest/hamcrest-core/1.3/hamcrest-core-1.3.jar\:/home/rtx/repair/d4j/Codec/8b/target/classes
crossover=onepoint
159 [main] INFO clegoues.genprog4java.main.Main  - Configuration file loaded
Deserialized fitnessCache HashMap
18191 [main] INFO clegoues.genprog4java.rep.CachingRepresentation  - loaded from source clegoues.genprog4java.java.ClassInfo@9dded4eb
34700 [main] INFO clegoues.genprog4java.rep.CachingRepresentation  - loaded from source clegoues.genprog4java.java.ClassInfo@16b99277
34700 [main] INFO clegoues.genprog4java.rep.CachingRepresentation  - sanity checking begins
35553 [main] INFO clegoues.genprog4java.rep.CachingRepresentation  - Checking test number 1 out of 4
35908 [main] INFO clegoues.genprog4java.rep.CachingRepresentation  - true (1)

35908 [main] INFO clegoues.genprog4java.rep.CachingRepresentation  - Checking test number 2 out of 4
36359 [main] INFO clegoues.genprog4java.rep.CachingRepresentation  - true (1)

36359 [main] INFO clegoues.genprog4java.rep.CachingRepresentation  - Checking test number 3 out of 4
36653 [main] INFO clegoues.genprog4java.rep.CachingRepresentation  - true (1)

36653 [main] INFO clegoues.genprog4java.rep.CachingRepresentation  - Checking test number 4 out of 4
36909 [main] INFO clegoues.genprog4java.rep.CachingRepresentation  - true (1)

36909 [main] INFO clegoues.genprog4java.rep.CachingRepresentation  - 	n1: 
37283 [main] INFO clegoues.genprog4java.rep.CachingRepresentation  - false (0)

37284 [main] INFO clegoues.genprog4java.rep.CachingRepresentation  - sanity checking completed (time taken = 2584)
37284 [main] INFO clegoues.genprog4java.localization.DefaultLocalization  - Start Fault Localization
37336 [main] INFO clegoues.genprog4java.localization.DefaultLocalization  - Finish Fault Localization
37337 [main] INFO clegoues.genprog4java.Search.Search  - search: genetic algorithm begins

37535 [main] INFO clegoues.genprog4java.fitness.Fitness  - 	 gen: 0 0.0 original (stored at: )
38078 [main] INFO clegoues.genprog4java.fitness.Fitness  - 	 gen: 0 0.0 StmtAppend(135,139) (stored at: variant0)
38276 [main] ERROR clegoues.genprog4java.rep.JavaRepresentation  - org/apache/commons/codec/binary/Base64InputStream.java:170: error: cannot find symbol
            while (readLen == 0) {
                   ^
  symbol:   variable readLen
  location: class Base64InputStream
org/apache/commons/codec/binary/Base64InputStream.java:183: error: cannot find symbol
                readLen = base64.readResults(b, offset, len);
                ^
  symbol:   variable readLen
  location: class Base64InputStream
org/apache/commons/codec/binary/Base64InputStream.java:185: error: cannot find symbol
            return readLen;
                   ^
  symbol:   variable readLen
  location: class Base64InputStream
3 errors

38277 [main] INFO clegoues.genprog4java.rep.CachingRepresentation  - StmtAppend(347,355) at variant1 fails to compile

38277 [main] INFO clegoues.genprog4java.fitness.Fitness  - 	 gen: 0 0.0 StmtAppend(347,355) (stored at: variant1)
38765 [main] INFO clegoues.genprog4java.fitness.Fitness  - 	 gen: 0 0.0 StmtReplace(331,344) (stored at: variant2)
39292 [main] INFO clegoues.genprog4java.fitness.Fitness  - 	 gen: 0 0.0 StmtDelete(131) (stored at: variant3)
39388 [main] ERROR clegoues.genprog4java.rep.JavaRepresentation  - org/apache/commons/codec/binary/Base64.java:615: error: incompatible types: missing return value
					return;
					^
1 error

39388 [main] INFO clegoues.genprog4java.rep.CachingRepresentation  - StmtAppend(167,118) at variant4 fails to compile

39388 [main] INFO clegoues.genprog4java.fitness.Fitness  - 	 gen: 0 0.0 StmtAppend(167,118) (stored at: variant4)
41182 [main] INFO clegoues.genprog4java.fitness.Fitness  - 	 gen: 0 12.0 StmtDelete(57) (stored at: variant5)
41182 [main] INFO clegoues.genprog4java.Search.Search  - 
Repair Found: StmtDelete(57) (in variant5)

41220 [main] INFO clegoues.genprog4java.fitness.Fitness  - Serialized test cache to file testcache.ser
41220 [main] INFO clegoues.genprog4java.main.Main  - 
Total elapsed time: 41

